Sample run on the data for April 2014

--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,5 @@
 [GlobalSettings]
 datasetloc=/home/pain/Dropbox/Datasets/KickStarter/ ;Location of where the datasets are located.
+
+[Source]
+WebAddress=https://webrobots.io/kickstarter-datasets/
